Update plugin to use Maven 3 dependency resolution
Also update the java source to a more modern version.  Use generics,
lists, streams, etc.  Take advantage of the syntatic sugar the
language has added in the last few years.